tests/ui/impl-trait/failed-to-resolve-instance-ice-123145.stderr
error[E0275]: overflow evaluating the requirement `(fn() -> impl Handler {one},): Handler`
  --> $DIR/failed-to-resolve-instance-ice-123145.rs:13:5
   |
LL |     (one,)
   |     ^^^^^^
   |
note: required for `fn() -> impl Handler {one}` to implement `Handler`
  --> $DIR/failed-to-resolve-instance-ice-123145.rs:8:32
   |
LL | impl<H: Handler, F: Fn() -> H> Handler for F {}
   |         -------                ^^^^^^^     ^
   |         |
   |         unsatisfied trait bound introduced here
   = note: 1 redundant requirement hidden
   = note: required for `(fn() -> impl Handler {one},)` to implement `Handler`
note: required by a bound in an opaque type
  --> $DIR/failed-to-resolve-instance-ice-123145.rs:12:18
   |
LL | fn one() -> impl Handler {
   |                  ^^^^^^^
note: this definition site has more where clauses than the opaque type
  --> $DIR/failed-to-resolve-instance-ice-123145.rs:12:1
   |
LL | fn one() -> impl Handler {
   | ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
